k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: talesofchina-deployment
  namespace: talesofchina
  labels:
    app: talesofchina
spec:
  replicas: 2
  selector:
    matchLabels:
      app: talesofchina
  template:
    metadata:
      labels:
        app: talesofchina
    spec:
      containers:
      - name: talesofchina
        image: devenops641/tales-of-china:latest
        imagePullPolicy: Always   
        ports:
        - containerPort: 80
