k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: talesofchina-service
  namespace: talesofchina
spec:
  type: NodePort
  selector:
    app: talesofchina
  ports:
  - port: 80
    targetPort: 80
